# flecs-systems-bgfx

./: .clang-format  CMakeLists.txt  README  README.md  flecs_systems_bgfx.c  flecs_systems_bgfx.h
include/: flecs_meta.h  flecs_os_api_posix.h  private.h
include/components/: flecs_components_graphics.h  flecs_components_gui.h  flecs_components_input.h
include/systems/: flecs_systems_bgfx.h  flecs_systems_imgui.h  flecs_systems_sdl2.h  flecs_systems_sdl2_config.h  sdl_window.h
sample_app/: CMakeLists.txt  main.c
src/: flecs_os_api_posix.c
src/components/: flecs_components_graphics.c  flecs_components_gui.c  flecs_components_input.c
src/systems/: flecs_systems_bgfx.c  flecs_systems_imgui.c  flecs_systems_sdl2.c  sdl_window.c
